logo and footer

--- a/templates/invoice/create_invoice.html
+++ b/templates/invoice/create_invoice.html
@@ -110,7 +110,7 @@ table .absorbing-column {
                                                     <div class="col-xs-6 col-md-6">
                                                         <strong>Date:</strong>
                                                         <input class="form-control dated" type="date" value="{{today_date|date:'Y-m-d'}}">
-                                                        <strong>District:</strong>
+                                                        <strong>District | City:</strong>
                                                         <input class="form-control district" type="text" name="district" id="district" placeholder="District ">
                                                     </div>
                                                     
