--- a/templates/products/add_product.html
+++ b/templates/products/add_product.html
@@ -17,7 +17,7 @@
             <div class="col-md-6 pull-left">
                 <div class="box">
                     <div class="box-header">
-                        <h4 class="text-center"><b>Add Company</b></h4>
+                        <h4 class="text-center"><b>Add New Product</b></h4>
                     </div>
                     <div class="box-body">
                         <form action="{% url 'product:add_product' %}" method="post" autocomplete="off">
