--- a/templates/index.html
+++ b/templates/index.html
@@ -1,65 +1,125 @@
 {% extends "base.html"%}
 {% block content %}
 {% load static %}
-<div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-          Dashboard
-        <small>Version 2.0</small>
-      </h1>
-      <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        {% if request.user.user_profile.user_type == request.user.user_profile.USER_TYPE_ADMIN %}
-        <li class="active"><a href="{% url 'home' %}">Main Dashboard</a></li>
-        {% endif %}
-      </ol>
-    </section>
+<div style="width: 85%; margin-left: auto">
+    <div class="row mt" style="background: white;">
 
-    <!-- Main content -->
-    <section class="content">
-      <!-- Info boxes -->
-      <!-- /.row -->
-
-      <!-- <!-- <div class="row">
-        <div class="col-md-12">
-          <div class="box">
-            <div class="box-header with-border">
-              <h3 class="box-title">Monthly Recap Report</h3>
-
-              <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                </button>
-                <div class="btn-group">
-                  <button type="button" class="btn btn-box-tool dropdown-toggle" data-toggle="dropdown">
-                    <i class="fa fa-wrench"></i></button>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                  </ul>
+        <div class="col-md-4 col-sm-4 mb" style="text-align: center;">
+            <div class="white-panel pn donut-chart">
+                <div class="white-header">
+                    <h5 style="font-family:italic">No. of Sales Today</h5>
                 </div>
-                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-              </div>
-            </div>
-            <!-- /.box-header -->
-        
-        <!-- /.col -->
-      </div>
-      <!-- /.row -->
+                <div class="row">
+                    <div class="col-sm-6 col-xs-6 goleft">
+                        <p><i class="fa fa-database"></i> No. {{ today_sales_count }}</p>
+                    </div>
+                </div>
+                <canvas id="todays-sales" height="120" width="120"></canvas>
 
-            <!-- /.box-body -->
-      
-            <!-- /.box-footer -->
-          </div>
-          <!-- /.box -->
+            </div><! --/grey-panel -->
         </div>
-        <!-- /.col -->
-      </div>
-      <!-- /.row -->
-    </section>
-    <!-- /.content -->
-  </div>
+
+        <div class="col-md-4 col-sm-4 mb" style="text-align: center;">
+            <div class="white-panel pn donut-chart">
+                <div class="white-header">
+                    <h5 style="font-family: italic">Today's Sales</h5>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-xs-6 goleft">
+                        <p><i class="fa fa-database"></i> Rs. {{ today_sales_sum }}</p>
+                    </div>
+                </div>
+                <canvas id="todays-profit" height="120" width="120"></canvas>
+            </div><! --/grey-panel -->
+        </div>
+
+        <div class="col-md-4 col-sm-4 mb" style="text-align: center;">
+            <div class="white-panel pn donut-chart">
+                <div class="white-header">
+                    <h5 style="font-family: italic">Overall Sales</h5>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-xs-6 goleft">
+                        <p><i class="fa fa-database"></i> Rs. {{ sales_sum }}</p>
+                    </div>
+                </div>
+                <canvas id="serverstatus002" height="120" width="120"></canvas>
+            </div><! --/grey-panel -->
+        </div>
+
+    </div>
+
+    <div class="row mt" style="background: white;">
+
+        <div class="col-md-8 col-sm-8 mb">
+            <div id="daily_graph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+        </div>
+
+        <div class="col-md-4 col-sm-4 mb">
+            <div class="content-panel" style="height:400px; overflow: auto;">
+                <h4 class="text-center"><strong>Daily Reports</strong></h4><br>
+                <table class="table table-striped table-advance table-hover daily-sales-table table-bordered">
+                    <thead>
+                    <tr>
+                        <th><i class=""></i>Date</th>
+                        <th><i class=""></i>Sales</th>
+                        <th><i class=""></i>Profit</th>
+                    </tr>
+                    </thead>
+                    <tbody class="daily-sales-tbody">
+                    </tbody>
+                </table>
+            </div>
+        </div><!-- /col-lg-9 END SECTION MIDDLE -->
+    </div>
+
+    <div class="row mt" style="background: white;">
+        <div class="col-md-8 col-sm-8 mb">
+            <div id="weekly-graph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+        </div>
+        <div class="col-md-4 col-sm-4 mb">
+            <div class="content-panel" style="height:400px; overflow: auto;">
+                <h4 class="text-center"><strong>Weekly Reports</strong></h4><br>
+                <table class="table table-striped table-advance table-hover item-table table-bordered">
+                    <thead>
+                    <tr>
+                        <th><i class=""></i>Date</th>
+                        <th><i class=""></i>Sales</th>
+                        <th><i class=""></i>Profit</th>
+                    </tr>
+                    </thead>
+                    <tbody class="weekly-sales-tbody">
+                    </tbody>
+                </table>
+            </div>
+        </div><!-- /col-lg-9 END SECTION MIDDLE -->
+    </div>
+
+    <div class="row mt" style="background: white;">
+        <div class="col-md-8 col-sm-8 mb">
+            <div id="monthly-graph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+        </div>
+
+        <div class="col-md-4 col-sm-4 mb">
+
+            <div class="content-panel" style="height:400px; overflow: auto;">
+                <h4 class="text-center"><strong>Monthly Reports</strong></h4><br>
+                <table class="table table-striped table-advance table-hover item-table table-bordered">
+                    <thead>
+                    <tr>
+                        <th><i class=""></i>Date</th>
+                        <th><i class=""></i>Sales</th>
+                        <th><i class=""></i>Profit</th>
+                    </tr>
+                    </thead>
+                    <tbody class="monthly-sales-tbody">
+
+                    </tbody>
+                </table>
+            </div>
+        </div><!-- /col-lg-9 END SECTION MIDDLE -->
+    </div>
+</div>
+
+    <script src="{% static 'js/index.js' %}"></script>
 {% endblock %}
