--- a/templates/login.html
+++ b/templates/login.html
@@ -61,24 +61,12 @@
                 <!-- /.col -->
             </div>
         </form>
-
-<!--        <div class="social-auth-links text-center">-->
-<!--            <p>- OR -</p>-->
-<!--            <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using-->
-<!--                Facebook</a>-->
-<!--            <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using-->
-<!--                Google+</a>-->
-<!--        </div>-->
-        <!-- /.social-auth-links -->
-
-<!--        <a href="#">I forgot my password</a><br>-->
-<!--        <a href="#" class="text-center">Register a new membership</a>-->
-
-    </div>
-    <!-- /.login-box-body -->
+            </div>
 </div>
-<!-- /.login-box -->
-
+    <div class="container">
+        <img src="{% static 'img/footer.jpeg' %}" style="width: 112%; margin-left: -69px;
+    margin-right: -21px;">
+    </div>
 <!-- jQuery 3 -->
 <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
 <!-- Bootstrap 3.3.7 -->
