--- a/templates/products/product_update.html
+++ b/templates/products/product_update.html
@@ -17,7 +17,7 @@
             <div class="col-md-6 pull-left">
                 <div class="box">
                     <div class="box-header">
-                        <h4 class="text-center"><b>Add Company</b></h4>
+                        <h4 class="text-center"><b>Update Product {{object.product_name|title}}</b></h4>
                     </div>
                     <div class="box-body">
                         <form action="{% url 'product:update_product' pk=object.id %}" method="post" autocomplete="off">
