--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,18 @@
             <!-- search form -->
             <ul class="sidebar-menu" data-widget="tree">
                 <li class="header">Main Navigation</li>
+                <li class="treeview {% block district %}{% endblock %}">
+                    <a href="#">
+                        <i class="fa fa-stack-overflow"></i> <span>District</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li class="{% block district_create %}{% endblock %}"><a href="{% url 'common:add_district' %}"><i class="fa fa-circle-o"></i>Add District</a></li>
+                        <li class="{% block district_list %}{% endblock %}"><a href="{% url 'common:list_district' %}"><i class="fa fa-circle-o"></i>District List</a></li>
+                    </ul>
+                </li>
                 <li class="treeview {% block stock %}{% endblock %}">
                     <a href="#">
                         <i class="fa fa-stack-overflow"></i> <span>User</span>
@@ -60,6 +72,19 @@
                     <ul class="treeview-menu">
                         <li class="{% block stock_create %}{% endblock %}"><a href="{% url 'common:register' %}"><i class="fa fa-circle-o"></i>Add User</a></li>
                         <li class="{% block stock_list %}{% endblock %}"><a href="{% url 'common:user_list' %}"><i class="fa fa-circle-o"></i>User List</a></li>
+                    </ul>
+                </li>
+                <li class="treeview {% block budget %}{% endblock %}">
+                    <a href="#">
+                        <i class="fa fa-stack-overflow"></i> <span>Budget</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li class="{% block budget_create %}{% endblock %}"><a href="{% url 'budget:create_new_budget' %}"><i class="fa fa-circle-o"></i>Add New Budget</a></li>
+                        <li class="{% block budget_list %}{% endblock %}"><a href="{% url 'budget:list_budget' %}"><i class="fa fa-circle-o"></i>Budget List</a></li>
+                        <li class="{% block revised_budget_list %}{% endblock %}"><a href="{% url 'budget:revised_list' %}"><i class="fa fa-circle-o"></i>Revised Budget List</a></li>
                     </ul>
                 </li>
                 <li class="treeview {% block parts %}{% endblock %}">
@@ -77,7 +102,7 @@
                 <li class="header">Product</li>
                 <li class="treeview {% block expense %}{% endblock %}">
                     <a href="#">
-                        <i class="fa fa-money"></i> <span>Products & Stocks</span>
+                        <i class="fa fa-money"></i> <span>Products & Formula</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                         </span>
@@ -85,6 +110,22 @@
                     <ul class="treeview-menu">
                         <li class="{% block add_expense %}{% endblock %}"><a href="{% url 'product:add_product' %}"><i class="fa fa-circle-o"></i> <span>Add Product</span></a></li>
                         <li class="{% block expense_list %}{% endblock %}"><a href="{% url 'product:products_items_list' %}"><i class="fa fa-circle-o"></i>Product List</a></li>
+                        <li class="{% block add_product_formula %}{% endblock %}"><a href="{% url 'product:add_product_formula' %}"><i class="fa fa-circle-o"></i> <span>Add Formula</span></a></li>
+                        <li class="{% block product_formula_list %}{% endblock %}"><a href="{% url 'product:product_formula_list' %}"><i class="fa fa-circle-o"></i>Formula List</a></li>
+                        <li class="{% block requested_formula_add %}{% endblock %}"><a href="{% url 'product:requested_formula' %}"><i class="fa fa-circle-o"></i>Add Requested Formula Product</a></li>
+                        <li class="{% block available_product_formula_list %}{% endblock %}"><a href="{% url 'product:available_product_formula_list' %}"><i class="fa fa-circle-o"></i>List Requested Formula Product</a></li>
+                    </ul>
+                </li>
+                <li class="header">Application Request</li>
+                <li class="treeview {% block request %}{% endblock %}">
+                    <a href="#">
+                        <i class="fa fa-user"></i> <span> Request</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li class="{% block add_request %}{% endblock %}"><a href="{% url 'product:request_dho_formula' %}"><i class="fa fa-circle-o"></i> <span>Create Request</span></a></li>
                     </ul>
                 </li>
                 <li class="header">User Ledger</li>
