--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% load static %}
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> GIL | LMIS | BMSD | Log in | Developed by Ali</title>
@@ -64,7 +65,7 @@
             </div>
 </div>
     <div class="container">
-        <img src="{% static 'img/footer.jpeg' %}" style="width: 112%; margin-left: -69px;
+        <img src="{% static 'img/footer.jpeg' %}" style="width: 144%; margin-left: -248px;
     margin-right: -21px;">
     </div>
 <!-- jQuery 3 -->
