--- a/templates/products/list_product.html
+++ b/templates/products/list_product.html
@@ -38,24 +38,22 @@
                             <table class="table align-items-center table-striped table-bordered table-hover">
                                 <thead class="thead-dark">
                                 <tr>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i> Company Name</th>
+                                    <th>S.No</th>
                         <th class="text-center"><i class="fa fa-question-circle"></i> Product Name</th>
-                        <th class="text-center"><i class=" fa fa-bookmark"></i> Unit</th>
-                        <th class="text-center"><i class=" fa fa-bookmark"></i> Available Items</th>
-                        <th class="text-center">Actions</th>
+                        <th class="text-center"><i class=" fa fa-bookmark"></i> Available Status</th>
                     </tr>
                     </thead>
                     <tbody class="product-table-body text-center">
                     {% for item in object_list %}
                         <tr>
-                            <td><a href="#">{{ item.company_name.name}}</a></td>
+                             <td>{{forloop.counter}}</td>   
                             <td class="#">{{ item.product_name }}</td>
-                            <td class="#">{{ item.unit_type }}</td>
-                            <td>{{ item.product_available_items|floatformat:-2 }}</td>
-                            <td>
-                                <a href="{% url 'product:stock_items_list' id=item.id %}"><button class="btn btn-primary btn-xs" title="StockIn Items"><i class="fa fa-plus"></i></button></a>
-                                <a href="{% url 'product:update_product' pk=item.id %}"><button class="btn btn-success btn-xs"><i class="fa fa-edit"></i></button></a>
-                            </td>
+                            <td>{% if item.status_available == True %}
+                                    <span style="color:green;">Available</span>
+                                        {% else %}
+                                        <span style="color:red;">Not Available Yet !</span>
+                                        {% endif %}
+                                    </td>
                         </tr>
                     {% endfor %}
                     </tbody>
